tests/NormalTests/paczka1/small_fuzzy/82612045.err
Error in line 5: VLlRlnO A527 43,4
Error in line 15: NItv S511 69,4
